[tool.poetry]
name = "streamapi"
version = "0.1.0"
description = ""
authors = ["Dhairya <dhairya.joshi@solytics-partners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
